--- a/packages/modddels/pubspec.yaml
+++ b/packages/modddels/pubspec.yaml
@@ -16,7 +16,12 @@ dependencies:
   collection: ^1.17.2
   fpdart: ^1.1.0
   meta: ^1.9.1
-  modddels_annotation_internal: ^0.2.0
+  #modddels_annotation_internal: ^0.2.0
+  modddels_annotation_internal:
+    git:
+      url: https://github.com/chikamichi/modddels
+      path: packages/modddels_annotation_internal
+      ref: wip-upgrade-pkg
   recursive_regex: ^1.0.0
   source_gen: ^2.0.0
 
@@ -24,8 +29,8 @@ dev_dependencies:
   build_runner: ^2.4.6
   build_test: ^2.2.0
   checks: ^0.2.2
-  freezed: ^2.4.2
-  freezed_annotation: ^2.4.1
+  freezed: ^3.0.6
+  freezed_annotation: ^3.0.0
   lints: ^2.1.1
   modddels_annotation_dartz:
     path: ../modddels_annotation_dartz
