--- a/packages/modddels_annotation_fpdart/pubspec.yaml
+++ b/packages/modddels_annotation_fpdart/pubspec.yaml
@@ -15,7 +15,12 @@ dependencies:
   fpdart: ^1.1.0
   kt_dart: ^1.1.0
   meta: ^1.9.1
-  modddels_annotation_internal: ^0.2.0
+  #modddels_annotation_internal: ^0.2.0
+  modddels_annotation_internal:
+    git:
+      url: https://github.com/chikamichi/modddels
+      path: packages/modddels_annotation_internal
+      ref: wip-upgrade-pkg
   test: ^1.24.4
 
 dev_dependencies:
