--- a/packages/modddels/pubspec.yaml
+++ b/packages/modddels/pubspec.yaml
@@ -16,12 +16,7 @@ dependencies:
   collection: ^1.17.2
   fpdart: ^1.1.0
   meta: ^1.9.1
-  #modddels_annotation_internal: ^0.2.0
-  modddels_annotation_internal:
-    git:
-      url: https://github.com/chikamichi/modddels
-      path: packages/modddels_annotation_internal
-      ref: wip-upgrade-pkg
+  modddels_annotation_internal: ^0.2.0
   recursive_regex: ^1.0.0
   source_gen: ^2.0.0
 
@@ -31,7 +26,7 @@ dev_dependencies:
   checks: ^0.2.2
   freezed: ^3.0.6
   freezed_annotation: ^3.0.0
-  lints: ^2.1.1
+  lints: ^5.1.1
   modddels_annotation_dartz:
     path: ../modddels_annotation_dartz
   modddels_annotation_fpdart:
