--- a/packages/modddels/pubspec.yaml
+++ b/packages/modddels/pubspec.yaml
@@ -11,12 +11,17 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  analyzer: ^7.4.5
+  analyzer: ^7.3.0
   build: ^2.4.1
   collection: ^1.17.2
   fpdart: ^1.1.0
   meta: ^1.9.1
-  modddels_annotation_internal: ^0.2.0
+  #modddels_annotation_internal: ^0.2.0
+  modddels_annotation_internal:
+    git:
+      url: https://github.com/chikamichi/modddels
+      path: packages/modddels_annotation_internal
+      ref: wip-upgrade-pkg
   recursive_regex: ^1.0.0
   source_gen: ^2.0.0
 
@@ -25,7 +30,7 @@ dev_dependencies:
   build_test: ^2.2.0
   checks: ^0.2.2
   freezed: ^3.0.6
-  freezed_annotation: ^3.0.0
+  freezed_annotation: ^2.4.1
   lints: ^5.1.1
   modddels_annotation_dartz:
     path: ../modddels_annotation_dartz
